--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@ src="https://www.Youtube.com/embed?list=UULFbfuCvBP6av6eUctc7URp7Q">
  ‎ ‎ ‎
  </p>
 
-<p> Buisness inquiries: </p>
- <center><a href=mailto:megakagebuissness@gmail.com>Gmail</a></center
+<p> Business inquiries: </p>
+ <center><a href=mailto:megakagebusiness@gmail.com>Gmail</a></center
 </footer> 
 <p> </p>
 
