--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="css.css">
 </head>
 	<title></title>
-	<link rel="shortcut icon" type="image/ico" href="img/Favicon.ico">
+	<link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
 <h1> Welcome To The MegaKage Website! </h1>
 
 <img src="lol.png" style="display:block;
