--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="css.css">
-<link rel="shortcut icon" type="image/png" href="img/favicon.png">
+ <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 </head>
 <h1> Welcome To The MegaKage Website! </h1>
 
