--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ src="https://www.Youtube.com/embed?list=UULFbfuCvBP6av6eUctc7URp7Q">
  </p>
 
 <p> Business inquiries: </p>
- <center><a href=mailto:megakagebusiness@gmail.com>Gmail</a></center
+ <center><a href=mailto:megakagebuissness@gmail.com>Gmail</a></center
 </footer> 
 <p> </p>
 
