--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
 <link rel="stylesheet" href="css.css">
  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1197422804051219"
+     crossorigin="anonymous"></script>
 </head>
 <h1> Welcome To The MegaKage Website! </h1>
 
